--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="wrapper">
         <header>
             <img src="assets/OpenFrame_Logo.png" alt="OpenFrame Logo" class="header-logo">
-            <h1>SafeZone Checker</h1>
+            <h1>Welcome to OpenFrame!</h1>
         </header>
 
         <div id="page-content">
