--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div id="page-content">
             <div id="container">
                 <aside id="sidebar">
-                    <h2>SafeZone Checker Options</h2>
+                    <h2>Options</h2>
                     
-                    <label>1. Select Platform:</label>
+                    <label>1. Select Your Platform:</label>
                     <div id="platform-chips" class="chip-container">
                         <button class="platform-chip" data-platform="meta">
                             <img src="assets/meta.svg" alt="Meta Icon" class="chip-icon"> Meta
@@ -38,7 +38,7 @@
                         </button>
                     </div>
 
-                    <label for="format-select">2. Select Format:</label>
+                    <label for="format-select">2. Select Your Format:</label>
                     <select id="format-select" disabled>
                         <option value="none">Choose a format...</option>
                     </select>
@@ -63,7 +63,7 @@
                         <img id="safezone-overlay" src="" alt="Safe Zone Overlay" style="display: none;">
                         
                         <div id="initial-placeholder">
-                            <p>Upload an image or video to preview</p>
+                            <p>Welcome to OpenFrame!</p>
                             <p class="small-text">Select a platform and format to get started</p>
                         </div>
                     </div>
